[package]
name = "controller-iii"
version = "0.1.0"
edition = "2024"

# CLI 依赖
[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
dialoguer = "0.11"
anyhow = "1.0"
thiserror = "2.0"
anstream = "0.6"

# File searching
jwalk = "0.8"
regex = "1.10"
rayon = "1.10"
once_cell = "1.19"

# Optional: progress bar
# indicatif = "0.17"
# Optional: logging
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform-specific: Windows NTFS
[target.'cfg(windows)'.dependencies]
mft = "0.7"
jiff = "0.2"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
